minor bug fixes and QOL