@@ -2,7 +2,6 @@ package com.slykbots.bajbot;
 
 import com.slykbots.bajbot.legacycommands.Ping;
 import com.slykbots.bajbot.legacycommands.Quiz;
-import com.slykbots.bajbot.listeners.EggListener;
 import com.slykbots.bajbot.listeners.NotifyMirrorListener;
 import com.slykbots.bajbot.listeners.QuizListener;
 import com.slykbots.bajbot.slashcommands.Confess;
@@ -24,12 +23,11 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 
 public class BajBot {
-    private static final List<SlashCommand> c = new ArrayList<>(Arrays.asList(
+    private static final List<SlashCommand> c = new ArrayList<>(List.of(
             new Confess()
     ));
 
@@ -53,7 +51,7 @@ public class BajBot {
                 .addEventListeners(new ReadyListener(e -> logger.info("Started as {}!", e.getJDA().getSelfUser().getName())))
                 .addEventListeners(new SCIListener(e -> c.forEach(cmd -> cmd.onSlashCommandInteraction(e))))
                 .addEventListeners(new MessageListener(e -> l.forEach(cmd -> cmd.handleLegacyCommand(e))))
-                .addEventListeners(new EggListener())
+                //.addEventListeners(new EggListener())
                 .addEventListeners(new QuizListener())
                 .addEventListeners(new NotifyMirrorListener())
                 .setActivity(Activity.customStatus("discord.gg/bajs")).build();
